fix spacing

--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -35,13 +35,10 @@
     max-width: 1300px;
     background: #000;
     margin: 0 auto;
-    /* height: 18vh; */
-    position: relative;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    /* gap: 20px;
-    padding: 30px;*/
     margin-top: 60px; 
+    gap: 20px;
 
  
 }
@@ -55,7 +52,7 @@
     border-bottom: 5px solid gray;
     font-size: 16px;
     font-weight: 500;
-    margin-bottom: 20px;
+    /* margin-bottom: 20px; */
     text-transform: capitalize;
     padding: 10px;
 }
@@ -418,18 +415,20 @@
         display: grid;
         grid-template-columns: 1fr ;
         grid-row: 1fr 1fr 1fr ;
+        row-gap: 4px;
+        background-color: white;
     }
-    .services{
-        /* margin-top: 10px; */
+    .stats .col1{
+        margin-bottom: 20px;
     }
 
     .stats .col1 h3{
-        font-size: 12px;
-        margin-bottom: 10px;
+        font-size: 20px;
+        /* margin-bottom: 10px; */
     }
     .stats .col1 p{
         font-size: 14px;
-        margin-top: 10px;
+        /* margin-top: 10px; */
     }
 
     .services .grid{
